--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typescript-back-template",
   "version": "1.0.0",
-  "type": "module",
+  "type": "commonjs",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -23,12 +23,13 @@
     "jest": "^28.0.3",
     "nodemon": "^2.0.12",
     "prisma": "^3.13.0",
-    "supertest": "^6.1.3",
+    "supertest": "^6.2.4",
     "ts-jest": "^28.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.5.0",
     "@prisma/client": "^3.13.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
