tests: removed random parameter in one of the tests. chore: uptated package.json and ignored files

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon src/server.ts",
+    "test": "dotenv -e .env.test prisma migrate dev && dotenv -e .env.test jest -- -i --watchAll"
   },
   "keywords": [],
   "author": "",
