tests: added cypress e2e tests for insert a new recommendation, retrieving all videos from the database and upvoting/downvoting.

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -39,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.38.0",
+    "cypress": "^10.8.0",
+    "eslint-plugin-cypress": "^2.12.1"
   }
 }
