chore: added 'build' and 'start' scripts. added safety lock for test routes.

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts",
+    "start": "ts-node dist/src/server.js",
+    "build": "tsc --build",
+    "dev": "NODE_ENV=test nodemon src/server.ts",
     "test": "dotenv -e .env.test prisma migrate dev && dotenv -e .env.test jest -- -i --watchAll"
   },
   "keywords": [],
